# etnicity-ai

./: .gitignore  init.ps1  pyproject.toml  readme.md  setup.py
etnicity_ai/: ann_layers.py  data.py  metrics.py  resnet_model.py  train.py  utils.py
notebooks/: image_recognition.ipynb  train.ipynb
