[tool.poetry]
name = "etnicity_ai"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.25.1"
pandas = "2.0.3"
matplotlib = "3.7.2"
torchvision = "0.15.2"
tqdm = "4.66.1"
seaborn = "0.12.2"
scikit-learn = "1.3.0"
tensorboard = "^2.14.0"
gdown = "4.5.4"
byol-pytorch = "0.8.0"
Pillow = "10.0.0"

torch = { version = "2.0.1", extras = ["cu118"] }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"